<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>


    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_windowname">Window name</string>
    <string name="act_main_open_window">Open Window</string>
    <string name="act_building_windows">Building windows</string>
    <string name="start">Start</string>


    <!-- menu -->
    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="title_activity_basic">BasicActivity</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>

    <!-- building activity -->
    <string name="act_building_name">Building Name</string>

    <!-- rooms activity -->
    <string name="act_rooms_name">Room name</string>
    <string name="act_rooms_floor">Floor</string>
    <string name="act_rooms_curr_temp">Current Temp</string>
    <string name="act_rooms_targ_temp">Target Temp</string>
    <string name="act_rooms_building_name">Building Name</string>
    <string name="act_rooms_windows_button">Windows</string>
    <string name="act_rooms_heaters_button">Heaters</string>
    <string name="act_heater_name">Heater Name</string>
    <string name="act_heater_power">Heater Power</string>
    <string name="act_heater_status">Heater Status</string>
    <string name="act_windows_switch_all_windows">Switch all windows</string>
    <string name="act_heaters_switch_all_heaters">Switch all heaters</string>
</resources>